# simple_global_planner

./: CMakeLists.txt  LICENSE  README.md  bgp_plugin.xml  package.xml
include/simple_global_planner/: simple_global_planner.hpp
src/: simple_global_planner.cpp
